--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     <!-- main -->
     <main>
         <!-- article 1 -->
-        <article class="grid_Item">
+         <section  class="grid_Container">
+        <article>
             <section class="image_section">
                 <figure>
                     <figcaption> Restaurants </figcaption>
@@ -64,7 +65,7 @@
         </article>
 
         <!-- article 2 -->
-        <article class="grid_Item">
+        <article>
             <section class="image_section">
                 <figure>
                     <figcaption> Kunst en Cultuur </figcaption>
@@ -81,7 +82,7 @@
         </article>
 
         <!-- article 3 -->
-        <article class="grid_Item">
+        <article>
             <section class="image_section">
                 <figure>
                     <figcaption> Evenementen </figcaption>
@@ -96,7 +97,7 @@
         </article>
 
         <!-- article 4 -->
-        <article class="grid_Item">
+        <article>
             <section class="image_section">
                 <figure>
                     <figcaption> Recreatie </figcaption>
@@ -110,6 +111,7 @@
                 <button class="redirect_button"> <a href="Recreation.html"> Lees meer </a> </button>
             </section>
         </article>
+    </section>
 
 
     </main>
