footer/ grind test

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <!-- footer -->
     <footer>
-        <img src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <img class="LogoWebsite" src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <p> View Hoorn 2024 &copy; </p>
         <ul>
             <li> <a href="https://policies.google.com/privacy?hl=en-US"> Privacy policy </a> </li>
