--- a/Restaurants.html
+++ b/Restaurants.html
@@ -25,15 +25,14 @@
     </nav>
 
     <main>
-        <section>
-
+        <section class="Content_Container">
             <!-- block 1 -->
             <article>
-                <section>
-                    <img src="img/De-Beijaard-Hoorn.jpg" alt="Afbeelding van de buitenkant van De Beijaard"
+                <section class="section_image">
+                    <img class="img_left" src="img/De-Beijaard-Hoorn.jpg" alt="Afbeelding van de buitenkant van De Beijaard"
                         title="Restaurant de beijaard van buiten">
                 </section>
-                <section>
+                <section class="section_text">
                     <h3> De Beijaard </h3>
                     <p> De Beiaard is een “eet- en bierencafé” aan het Kerkplein in Hoorn. Het is een gezellige plek
                         die bekend staat om zijn uitgebreide selectie speciaalbieren en heerlijke gerechten.
@@ -48,7 +47,7 @@
 
             <!-- block 2 -->
             <article>
-                <section>
+                <section class="section_text">
                     <h3> Wok van Pejo </h3>
                     <p> De Wok van Pejo is een populair wokrestaurant in de wijk Zwaag, binnen Hoorn. Het restaurant
                         biedt een uitgebreide keuze aan gerechten, waaronder diverse voorgerechten, soepen,
@@ -58,19 +57,19 @@
                     </p>
                     <button class="redirect_button"> <a href="https://www.wokvanpejo.nl/"> Bezoek website </a> </button>
                 </section>
-                <section>   
-                    <img src="img/Wok-Van-Pejo-Zwaag.jpg" alt="Afbeelding binnen in Wok van Pejo"
+                <section class="section_image">
+                    <img class="img_right" src="img/Wok-Van-Pejo-Zwaag.jpg" alt="Afbeelding binnen in Wok van Pejo"
                     title="Ergens in de Wok van Pejo">
                 </section>
             </article>
 
             <!-- block 3 -->
             <article>
-                <section>
-                    <img src="img/Portofino-Hoorn-2.jpg" alt="Afbeelding voorkant portofino met 2 eigenaren"
+                <section class="section_image">
+                    <img class="img_left" src="img/Portofino-Hoorn-2.jpg" alt="Afbeelding voorkant portofino met 2 eigenaren"
                     title="eigenaren van portofino voor portofino">
                 </section>
-                <section>
+                <section class="section_text">
                     <h3> Portofino Hoorn </h3>
                     <p> Portofino is een Italiaans familierestaurant aan de Nieuwlandstraat in het centrum van
                         Hoorn. Hier zorgt een team van Nederlanders en Italianen voor menu's vol met authentieke
@@ -85,7 +84,7 @@
 
             <!-- block 4 -->
             <article>
-                <section>
+                <section class="section_text">
                     <h3> Ridderrikhoff </h3>
                     <p> Restaurant Ridderikhoff is een sfeervol restaurant aan het Kerkplein in het historische
                         centrum van Hoorn. Het biedt een verfijnd menu met Franse en internationale gerechten,
@@ -96,8 +95,8 @@
                         Hoorn. </p>
                     <button class="redirect_button"> <a href="https://ridderikhoff.org/"> Bezoek website </a> </button>
                 </section>
-                <section>   
-                    <img src="img/Ridderikhoff-Hoorn.jpeg" alt="Buitenkant van restaurant Ridderrikhoff"
+                <section class="section_image">
+                    <img class="img_right" src="img/Ridderikhoff-Hoorn.jpeg" alt="Buitenkant van restaurant Ridderrikhoff"
                     title="De buitenkant van Ridderrikhoff">
                 </section>
             </article>
