--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <section class="text_section">
                 <h5> Restaurants </h5>
                 <p> Ontdenk wat voor verschillende restaurants er in Hoorn te ontdekken zijn! </p>
-                <button class="redirect_button"> <a href="Restaurants.html"> Lees meer </a> </button>
+                <button> <a href="Restaurants.html"> Lees meer </a> </button>
             </section>
         </article>
 
@@ -77,7 +77,7 @@
                 <h5> Kunst en Cultuur </h5>
                 <p> Bekijk kunstwerken in de verschillende Musea in Hoorn, of geniet van verschillende
                     voorstellingen in theaters! </p>
-                <button class="redirect_button"> <a href="History_And_Culture.html"> Lees meer </a> </button>
+                <button> <a href="History_And_Culture.html"> Lees meer </a> </button>
             </section>
         </article>
 
@@ -92,7 +92,7 @@
             <section class="text_section">
                 <h5> Evenementen </h5>
                 <p> Bekijk de jaarlijkse evenementen die in Hoorn gehouden worden! </p>
-                <button class="redirect_button"> <a href="Events.html"> Lees meer </a> </button>
+                <button> <a href="Events.html"> Lees meer </a> </button>
             </section>
         </article>
 
@@ -108,7 +108,7 @@
             <section class="text_section">
                 <h5> Recreatie </h5>
                 <p> Bekijk wat voor recreatieve mogelijkheden er in Hoorn zijn! </p>
-                <button class="redirect_button"> <a href="Recreation.html"> Lees meer </a> </button>
+                <button> <a href="Recreation.html"> Lees meer </a> </button>
             </section>
         </article>
     </section>
