test other pages

--- a/Events.html
+++ b/Events.html
@@ -29,11 +29,11 @@
 
              <!-- block 1 -->
              <article>
-                <section>
-                    <img src="img/Jaarmarkt-Blokker.jpg" alt="Afbeelding jaarmarktblokker"
+                <section class="section_image">
+                    <img class="img_left" src="img/Jaarmarkt-Blokker.jpg" alt="Afbeelding jaarmarktblokker"
                     title="verschillende kraampjes op straat in Blokker">
                 </section>
-                <section>
+                <section class="section_text">
                     <h3> Jaarmarkt Blokker </h3>
                     <p> Elk jaar is er op de laatste zaterdag van augustus een jaarmarkt in Blokker. Op de jaarmarkt
                         is een diversie aanbod aan verschillende producten en diensten op de maarliefts 200
@@ -47,7 +47,7 @@
 
             <!-- block 2 -->
             <article>
-                <section>
+                <section class="section_text">
                     <h3> Kermis Hoorn </h3>
                     <p> Elkjaar is er in Hoorn een kermis. Dit jaar van zaterdag 10 augustus tot en met maandag 19
                         augustus is de 578 editie van kermis Hoorn terug met 71
@@ -58,19 +58,19 @@
                     </p>
                     <button class="redirect_button"> <a href="https://www.kermis-hoorn.nl/"> Bezoek website </a> </button>
                 </section>
-                <section>   
-                    <img src="img/Kermis-Hoorn.jpg" alt="Afbeelding van kermis Hoorn"
+                <section class="section_image">   
+                    <img class="img_right" src="img/Kermis-Hoorn.jpg" alt="Afbeelding van kermis Hoorn"
                     title="attracties op de rode steen">
                 </section>
             </article>
 
            <!-- block 3 -->
             <article>
-                <section>   
-                    <img src="img/Live-In-Hoorn.jpg" alt="Afbeelding live in Hoorn"
+                <section class="section_image">   
+                    <img class="img_left" src="img/Live-In-Hoorn.jpg" alt="Afbeelding live in Hoorn"
                     title="Podium live in Hoorn met publiek">
                 </section>
-                <section>
+                <section class="section_text">
                     <h3> Live in Hoorn </h3>
                     <p> Live in Hoorn is een muzikaal feest dat sinds 2007 onregelmatig wordt gehouden. Het
                         evenement brengt lokale en regionale artiesten samen, waardoor bezoekers kunnen genieten van
