--- a/History_And_Culture.html
+++ b/History_And_Culture.html
@@ -29,11 +29,11 @@
 
              <!-- block 1 -->
              <article>
-                <section>
-                    <img src="img/Westfries-Museum-Hoorn.jpg" alt="Afbeelding voorkant westvries museum"
+                <section class="section_image">
+                    <img class="img_left" src="img/Westfries-Museum-Hoorn.jpg" alt="Afbeelding voorkant westvries museum"
                     title="De voorkant van het WestFries Museum">
                 </section>
-                <section>
+                <section class="section_text">
                     <h3> Het WestFries Museum </h3>
                     <p> Het WestFries museum is een museum aan het plein “De rode steen” in het centrum van Hoorn.
                         In het WestFries museum kan over de interesante geschiedenis lezen en zien van de stad Hoorn
@@ -47,7 +47,7 @@
 
             <!-- block 2 -->
             <article>
-                <section>
+                <section class="section_text">
                     <h3> Park Schouwburg </h3>
                     <p> Schouwburg Het Park, ook bekend als Park Schouwburg, is een theater gelegen aan de Hoornse
                         Hop in Hoorn. Het biedt een breed scala aan voorstellingen, zoals toneel, musicals, cabaret,
@@ -58,19 +58,19 @@
                     </p>
                     <button class="redirect_button"> <a href="https://www.hetpark.nl/"> Bezoek website </a> </button>
                 </section>
-                <section>   
-                    <img src="img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Park Schouwburg"
+                <section class="section_image">   
+                    <img class="img_right" src="img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Park Schouwburg"
                     title="Park Schouwburg in de avond">
                 </section>
             </article>
 
             <!-- block 3 -->
             <article>
-                <section>
-                    <img src="img/Museum-Van-De-20-Eeuw-Hoorn.webp" alt="Afbeelding Museum van de 20ste eeuw"
+                <section class="section_image">
+                    <img class="img_left" src="img/Museum-Van-De-20-Eeuw-Hoorn.webp" alt="Afbeelding Museum van de 20ste eeuw"
                     title="Het museum van de 20ste eeuw vanaf een van de ingangen">
                 </section>
-                <section>
+                <section class="section_text">
                     <h3> Museum van de 20e Eeuw </h3>
                     <p> Het museum van de 20e Eeuw is een museum die in een voormalige gevangenis in de haven van
                         Hoorn zit. In het museum kan je zien hoe het leven in de 20ste eeuw uitziet, van oude
@@ -85,7 +85,7 @@
 
             <!-- block 4 -->
             <article>
-                <section>
+                <section class="section_text">
                     <h3> De Halve Maen </h3>
                     <p> De Halve Maen is een replica van een 17e-eeuws VOC-schip (Verenigde Oostindische Compagnie),
                         gelegen in de haven van Hoorn. Het varende museum biedt bezoekers de kans om terug in de
@@ -96,8 +96,8 @@
                     </p>
                     <button class="redirect_button"> <a href="https://halvemaen.nl/"> Bezoek website </a> </button>
                 </section>
-                <section>   
-                    <img src="img/De-Halve-Maen-Hoorn.jpg" alt="Afbeelding van de halve maen"
+                <section class="section_image">   
+                    <img class="img_right" src="img/De-Halve-Maen-Hoorn.jpg" alt="Afbeelding van de halve maen"
                     title="De halve maen aan de kade">
                 </section>
             </article>
