--- a/Recreation.html
+++ b/Recreation.html
@@ -29,11 +29,11 @@
 
             <!-- block 1 -->
             <article>
-                <section>
-                    <img src="img/Vue-Hoorn.jpg" alt="Afbeelding ingang Vue Hoorn"
+                <section class="section_image">
+                    <img class="img_left" src="img/Vue-Hoorn.jpg" alt="Afbeelding ingang Vue Hoorn"
                     title="De ingang van Vue Hoorn">
                 </section>
-                <section>
+                <section class="section_text">
                     <h3> Vue Hoorn </h3>
                         <p> Heb je zin om films op het grote scherm te bekijken? Dan is Vue Hoorn de ideale plek voor
                             jou! Gelegen naast de A7, aan de rand van Hoorn, en direct naast het Van der Valk Hotel, kun
@@ -48,7 +48,7 @@
 
             <!-- block 2 -->
             <article>
-                <section>
+                <section class="section_text">
                     <h3> De Waterhoorn </h3>
                     <p> Heeft u zin om te gaan zwemmen, maar wilt u niet wachten tot het warmer wordt? Dan is de
                         Waterhoorn de perfecte plek voor u! Dit overdekte zwembad in Hoorn biedt het hele jaar door
@@ -58,19 +58,19 @@
                     </p>
                     <button class="redirect_button"> <a href="https://www.optisport.nl/zwembad-de-waterhoorn-hoorn"> Bezoek website </a> </button>
                 </section>
-                <section>   
-                    <img src="img/De-Water-Hoorn.jpg" alt="Afbeelding binnenkant Water Hoorn"
+                <section class="section_image">   
+                    <img class="img_right" src="img/De-Water-Hoorn.jpg" alt="Afbeelding binnenkant Water Hoorn"
                     title="Een van de binnenzwembaden">
                 </section>
             </article>
 
             <!-- block 3 -->
             <article>
-                <section>
-                    <img src="img/Sportcentrum-Hoorn.jpg" alt="Afbeelding binnenkant sportcentrum Hoorn"
+                <section class="section_image">
+                    <img class="img_left" src="img/Sportcentrum-Hoorn.jpg" alt="Afbeelding binnenkant sportcentrum Hoorn"
                     title="Een van de binnen velden">
                 </section>
-                <section>
+                <section class="section_text">
                     <h3> Sportcentrum Hoorn </h3>
                     <p> Sportcentrum Hoorn is een sportcentrum aan de Holenweg 14a in Hoorn. Het centrum biedt een
                         breed scala aan sportfaciliteiten, zoals fitness, groepslessen, squashbanen en een sauna.
@@ -85,7 +85,7 @@
 
             <!-- block 4 -->
             <article>
-                <section>
+                <section class="section_text">
                     <h3> Sam city </h3>
                     <p> Sam city is een groot indoor sport- en recreatiecentrum in Hoorn, gelegen aan de
                         Westfrisiaweg. Het biedt een breed scala aan activiteiten voor alle leeftijden, zoals
@@ -98,7 +98,7 @@
                     <button class="redirect_button"> <a href="https://samcity.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
-                    <img src="img/Samcity-Hoorn.jpeg" alt="Afbeelding buitenkant sam city"
+                    <img class="img_right" src="img/Samcity-Hoorn.jpeg" alt="Afbeelding buitenkant sam city"
                     title="Het bebouw waarin samcity zit">
                 </section>
             </article>
