class="Content_Container"

--- a/Events.html
+++ b/Events.html
@@ -25,13 +25,13 @@
     </nav>
 
     <main>
-        <section>
+        <section class="Content_Container">
 
-             <!-- block 1 -->
-             <article>
+            <!-- block 1 -->
+            <article>
                 <section class="section_image">
                     <img class="img_left" src="img/Jaarmarkt-Blokker.jpg" alt="Afbeelding jaarmarktblokker"
-                    title="verschillende kraampjes op straat in Blokker">
+                        title="verschillende kraampjes op straat in Blokker">
                 </section>
                 <section class="section_text">
                     <h3> Jaarmarkt Blokker </h3>
@@ -41,7 +41,8 @@
                         demonstratie, pony rijden, ballon kunstenaar, springkussen draaimolen en nog meer! Dus er is
                         altijd wel iets te doen voor jong en oud.
                     </p>
-                    <button class="redirect_button"> <a href="https://www.jaarmarktblokker.nl/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://www.jaarmarktblokker.nl/"> Bezoek website </a>
+                    </button>
                 </section>
             </article>
 
@@ -56,19 +57,20 @@
                         Spoorstraat (44-46), Ramen (47), Niewland (48), Gouw(49-57), Nieuwstraat (58-64), Kerkplein
                         (65-68) en De rode steen (69-71).
                     </p>
-                    <button class="redirect_button"> <a href="https://www.kermis-hoorn.nl/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://www.kermis-hoorn.nl/"> Bezoek website </a>
+                    </button>
                 </section>
-                <section class="section_image">   
+                <section class="section_image">
                     <img class="img_right" src="img/Kermis-Hoorn.jpg" alt="Afbeelding van kermis Hoorn"
-                    title="attracties op de rode steen">
+                        title="attracties op de rode steen">
                 </section>
             </article>
 
-           <!-- block 3 -->
+            <!-- block 3 -->
             <article>
-                <section class="section_image">   
+                <section class="section_image">
                     <img class="img_left" src="img/Live-In-Hoorn.jpg" alt="Afbeelding live in Hoorn"
-                    title="Podium live in Hoorn met publiek">
+                        title="Podium live in Hoorn met publiek">
                 </section>
                 <section class="section_text">
                     <h3> Live in Hoorn </h3>
@@ -78,7 +80,8 @@
                         Live in Hoorn uitgegroeid tot een geliefde gebeurtenis voor muziekliefhebbers en een
                         levendige ontmoetingsplaats voor de gemeenschap.
                     </p>
-                    <button class="redirect_button"> <a href="https://www.liveinhoorn.nl/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://www.liveinhoorn.nl/"> Bezoek website </a>
+                    </button>
                 </section>
             </article>
 
