--- a/History_And_Culture.html
+++ b/History_And_Culture.html
@@ -25,13 +25,13 @@
     </nav>
 
     <main>
-        <section>
+        <section class="Content_Container">
 
-             <!-- block 1 -->
-             <article>
+            <!-- block 1 -->
+            <article>
                 <section class="section_image">
-                    <img class="img_left" src="img/Westfries-Museum-Hoorn.jpg" alt="Afbeelding voorkant westvries museum"
-                    title="De voorkant van het WestFries Museum">
+                    <img class="img_left" src="img/Westfries-Museum-Hoorn.jpg"
+                        alt="Afbeelding voorkant westvries museum" title="De voorkant van het WestFries Museum">
                 </section>
                 <section class="section_text">
                     <h3> Het WestFries Museum </h3>
@@ -41,7 +41,8 @@
                         meer. Dit jaar (2024) kan je tussen 22 juni t/m 3 november meer dan 200 orginele etsen van
                         Rembrandt. Ben je een Rembrandt liefhebber? Mis deze kans dan niet!
                     </p>
-                    <button class="redirect_button"> <a href="https://westfriesmuseum.nl/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://westfriesmuseum.nl/"> Bezoek website </a>
+                    </button>
                 </section>
             </article>
 
@@ -58,17 +59,18 @@
                     </p>
                     <button class="redirect_button"> <a href="https://www.hetpark.nl/"> Bezoek website </a> </button>
                 </section>
-                <section class="section_image">   
+                <section class="section_image">
                     <img class="img_right" src="img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Park Schouwburg"
-                    title="Park Schouwburg in de avond">
+                        title="Park Schouwburg in de avond">
                 </section>
             </article>
 
             <!-- block 3 -->
             <article>
                 <section class="section_image">
-                    <img class="img_left" src="img/Museum-Van-De-20-Eeuw-Hoorn.webp" alt="Afbeelding Museum van de 20ste eeuw"
-                    title="Het museum van de 20ste eeuw vanaf een van de ingangen">
+                    <img class="img_left" src="img/Museum-Van-De-20-Eeuw-Hoorn.webp"
+                        alt="Afbeelding Museum van de 20ste eeuw"
+                        title="Het museum van de 20ste eeuw vanaf een van de ingangen">
                 </section>
                 <section class="section_text">
                     <h3> Museum van de 20e Eeuw </h3>
@@ -79,7 +81,9 @@
                         leven van vroeger, de armoede, het lang werken en hoe de woonomstandigheid van vroeger is
                         veranderd vergeleken met nu.
                     </p>
-                    <button class="redirect_button"> <a href="https://www.museumhoorn.nl/pg-5548-7-7378/pagina/welkom.html"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a
+                            href="https://www.museumhoorn.nl/pg-5548-7-7378/pagina/welkom.html"> Bezoek website </a>
+                    </button>
                 </section>
             </article>
 
@@ -96,9 +100,9 @@
                     </p>
                     <button class="redirect_button"> <a href="https://halvemaen.nl/"> Bezoek website </a> </button>
                 </section>
-                <section class="section_image">   
+                <section class="section_image">
                     <img class="img_right" src="img/De-Halve-Maen-Hoorn.jpg" alt="Afbeelding van de halve maen"
-                    title="De halve maen aan de kade">
+                        title="De halve maen aan de kade">
                 </section>
             </article>
 
