--- a/Recreation.html
+++ b/Recreation.html
@@ -25,24 +25,25 @@
     </nav>
 
     <main>
-        <section>
+        <section class="Content_Container">
 
             <!-- block 1 -->
             <article>
                 <section class="section_image">
                     <img class="img_left" src="img/Vue-Hoorn.jpg" alt="Afbeelding ingang Vue Hoorn"
-                    title="De ingang van Vue Hoorn">
+                        title="De ingang van Vue Hoorn">
                 </section>
                 <section class="section_text">
                     <h3> Vue Hoorn </h3>
-                        <p> Heb je zin om films op het grote scherm te bekijken? Dan is Vue Hoorn de ideale plek voor
-                            jou! Gelegen naast de A7, aan de rand van Hoorn, en direct naast het Van der Valk Hotel, kun
-                            je hier de nieuwste blockbusters beleven. De bioscoop biedt zowel 2D- als 3D-voorstellingen,
-                            waardoor je kunt genieten van films met indrukwekkende beelden en een geweldige sfeer. Met
-                            comfortabele zitplaatsen en moderne technologie is Vue Hoorn dé plek voor een complete
-                            filmervaring.
-                        </p>
-                        <button class="redirect_button"> <a href="https://www.vuecinemas.nl/vue-cinemas/hoorn"> Bezoek website </a> </button>
+                    <p> Heb je zin om films op het grote scherm te bekijken? Dan is Vue Hoorn de ideale plek voor
+                        jou! Gelegen naast de A7, aan de rand van Hoorn, en direct naast het Van der Valk Hotel, kun
+                        je hier de nieuwste blockbusters beleven. De bioscoop biedt zowel 2D- als 3D-voorstellingen,
+                        waardoor je kunt genieten van films met indrukwekkende beelden en een geweldige sfeer. Met
+                        comfortabele zitplaatsen en moderne technologie is Vue Hoorn dé plek voor een complete
+                        filmervaring.
+                    </p>
+                    <button class="redirect_button"> <a href="https://www.vuecinemas.nl/vue-cinemas/hoorn"> Bezoek
+                            website </a> </button>
                 </section>
             </article>
 
@@ -56,19 +57,20 @@
                         glijbanen en wellnessfaciliteiten is de Waterhoorn ideaal voor gezinnen, zwemliefhebbers en
                         iedereen die wil genieten van een verfrissende duik, ongeacht het seizoen.
                     </p>
-                    <button class="redirect_button"> <a href="https://www.optisport.nl/zwembad-de-waterhoorn-hoorn"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://www.optisport.nl/zwembad-de-waterhoorn-hoorn">
+                            Bezoek website </a> </button>
                 </section>
-                <section class="section_image">   
+                <section class="section_image">
                     <img class="img_right" src="img/De-Water-Hoorn.jpg" alt="Afbeelding binnenkant Water Hoorn"
-                    title="Een van de binnenzwembaden">
+                        title="Een van de binnenzwembaden">
                 </section>
             </article>
 
             <!-- block 3 -->
             <article>
                 <section class="section_image">
-                    <img class="img_left" src="img/Sportcentrum-Hoorn.jpg" alt="Afbeelding binnenkant sportcentrum Hoorn"
-                    title="Een van de binnen velden">
+                    <img class="img_left" src="img/Sportcentrum-Hoorn.jpg"
+                        alt="Afbeelding binnenkant sportcentrum Hoorn" title="Een van de binnen velden">
                 </section>
                 <section class="section_text">
                     <h3> Sportcentrum Hoorn </h3>
@@ -79,7 +81,8 @@
                         ideale plek voor iedereen die aan zijn conditie wil werken of wil ontspannen na een
                         intensieve training.
                     </p>
-                    <button class="redirect_button"> <a href="https://sportcentrumhoorn.nl/#/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://sportcentrumhoorn.nl/#/"> Bezoek website </a>
+                    </button>
                 </section>
             </article>
 
@@ -97,9 +100,9 @@
                     </p>
                     <button class="redirect_button"> <a href="https://samcity.nl/"> Bezoek website </a> </button>
                 </section>
-                <section>   
+                <section>
                     <img class="img_right" src="img/Samcity-Hoorn.jpeg" alt="Afbeelding buitenkant sam city"
-                    title="Het bebouw waarin samcity zit">
+                        title="Het bebouw waarin samcity zit">
                 </section>
             </article>
         </section>
