--- a/Restaurants.html
+++ b/Restaurants.html
@@ -29,8 +29,8 @@
             <!-- block 1 -->
             <article>
                 <section class="section_image">
-                    <img class="img_left" src="img/De-Beijaard-Hoorn.jpg" alt="Afbeelding van de buitenkant van De Beijaard"
-                        title="Restaurant de beijaard van buiten">
+                    <img class="img_left" src="img/De-Beijaard-Hoorn.jpg"
+                        alt="Afbeelding van de buitenkant van De Beijaard" title="Restaurant de beijaard van buiten">
                 </section>
                 <section class="section_text">
                     <h3> De Beijaard </h3>
@@ -39,9 +39,10 @@
                         Bezoekers waarderen de ontspannen sfeer, waar je zowel kunt genieten van een informele
                         maaltijd als een borrel met vrienden. De combinatie van goede service, smaakvolle gerechten
                         en een uitnodigende ambiance maakt De Beiaard tot een populaire ontmoetingsplaats in het
-                        hart van de stad. 
+                        hart van de stad.
                     </p>
-                    <button class="redirect_button"> <a href="https://debeiaard-hoorn.nl/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://debeiaard-hoorn.nl/"> Bezoek website </a>
+                    </button>
                 </section>
             </article>
 
@@ -53,21 +54,22 @@
                         biedt een uitgebreide keuze aan gerechten, waaronder diverse voorgerechten, soepen,
                         barbecue-opties, een sushi-bar, en een warm buffet. Dankzij dit brede aanbod is er voor elke
                         smaak iets te vinden, waardoor het een ideale plek is voor zowel liefhebbers van Aziatische
-                        gerechten als voor gezinnen of groepen die van variatie houden. 
+                        gerechten als voor gezinnen of groepen die van variatie houden.
                     </p>
                     <button class="redirect_button"> <a href="https://www.wokvanpejo.nl/"> Bezoek website </a> </button>
                 </section>
                 <section class="section_image">
                     <img class="img_right" src="img/Wok-Van-Pejo-Zwaag.jpg" alt="Afbeelding binnen in Wok van Pejo"
-                    title="Ergens in de Wok van Pejo">
+                        title="Ergens in de Wok van Pejo">
                 </section>
             </article>
 
             <!-- block 3 -->
             <article>
                 <section class="section_image">
-                    <img class="img_left" src="img/Portofino-Hoorn-2.jpg" alt="Afbeelding voorkant portofino met 2 eigenaren"
-                    title="eigenaren van portofino voor portofino">
+                    <img class="img_left" src="img/Portofino-Hoorn-2.jpg"
+                        alt="Afbeelding voorkant portofino met 2 eigenaren"
+                        title="eigenaren van portofino voor portofino">
                 </section>
                 <section class="section_text">
                     <h3> Portofino Hoorn </h3>
@@ -76,9 +78,10 @@
                         Italiaanse gerechten. Van klassieke pasta's zoals Carbonara tot versgebakken Focaccia en
                         heerlijke desserts zoals Torta Limone, er is voor iedere liefhebber van de Italiaanse keuken
                         iets te vinden. Als je op zoek bent naar een plek om échte Italiaanse smaken te proeven, dan
-                        is Portofino de ideale bestemming! 
+                        is Portofino de ideale bestemming!
                     </p>
-                    <button class="redirect_button"> <a href="https://www.portofinodapiero.nl"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://www.portofinodapiero.nl"> Bezoek website </a>
+                    </button>
                 </section>
             </article>
 
@@ -96,8 +99,8 @@
                     <button class="redirect_button"> <a href="https://ridderikhoff.org/"> Bezoek website </a> </button>
                 </section>
                 <section class="section_image">
-                    <img class="img_right" src="img/Ridderikhoff-Hoorn.jpeg" alt="Buitenkant van restaurant Ridderrikhoff"
-                    title="De buitenkant van Ridderrikhoff">
+                    <img class="img_right" src="img/Ridderikhoff-Hoorn.jpeg"
+                        alt="Buitenkant van restaurant Ridderrikhoff" title="De buitenkant van Ridderrikhoff">
                 </section>
             </article>
 
