form test border/ next to eachother

--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -26,9 +26,9 @@
     </nav>
 
     <main>
-        <section id="form_container">
-            <section id="form_decorImage">
-                <img src="img/Hoorn-Hero.jpg" alt="Foto binnenstad Hoorn" title="decoratie pagina">
+        <section class="form_container">
+            <section>
+                <img id="form_decorImage" src="img/Hoorn-Hero.jpg" alt="Foto binnenstad Hoorn" title="decoratie pagina">
             </section>
 
             <section id="form_questionForm">
