--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -31,11 +31,12 @@
                 <img id="form_decorImage" src="img/Hoorn-Hero.jpg" alt="Foto binnenstad Hoorn" title="decoratie pagina">
             </section>
 
-            <section id="form_questionForm">
+            <section class="form_questionForm">
                 <article>
+                    <h2> Contact Formulier </h2>
                     <p> <em> Velden met een <strong> * </strong> zijn verplicht </em> </p>
                     <form>
-                        <fieldset>
+                        <fieldset class="form_content">
                             <legend> Contact Form </legend>
                             <table>
                                 <tr>
