form / currentpage button css

--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -34,7 +34,7 @@
             <section class="form_questionForm">
                 <article>
                     <h2> Contact Formulier </h2>
-                    <p> <em> Velden met een <strong> * </strong> zijn verplicht </em> </p>
+                    <p id="imporant_info"> <em> Velden met een <strong> * </strong> zijn verplicht </em> </p>
                     <form>
                         <fieldset class="form_content">
                             <legend> Contact Form </legend>
@@ -81,7 +81,7 @@
                                     </td>
                                 </tr>
                             </table>
-                            <input type="submit" id="submit" value="submit">
+                            <button type="submit" id="submit">Submit</button>
                         </fieldset>
                     </form>
                 </article>
