currentpage button html

--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -21,7 +21,7 @@
             <li> <a href="History_And_Culture.html"> Kunst en Cultuur </a> </li>
             <li> <a href="Events.html"> Evenementen </a> </li>
             <li> <a href="Recreation.html"> Recreatie </a> </li>
-            <li> <a href="Contact_Page.html"> Contact </a> </li>
+            <li class="currentpage_Button"> <a href="Contact_Page.html"> Contact </a> </li>
         </ul>
     </nav>
 
