--- a/Events.html
+++ b/Events.html
@@ -18,7 +18,7 @@
             <li> <a href="index.html"> Home </a> </li>
             <li> <a href="Restaurants.html"> Restaurants </a> </li>
             <li> <a href="History_And_Culture.html"> Kunst en Cultuur </a> </li>
-            <li> <a href="Events.html"> Evenementen </a> </li>
+            <li class="currentpage_Button"> <a href="Events.html"> Evenementen </a> </li>
             <li> <a href="Recreation.html"> Recreatie </a> </li>
             <li> <a href="Contact_Page.html"> Contact </a> </li>
         </ul>
