--- a/Restaurants.html
+++ b/Restaurants.html
@@ -16,7 +16,7 @@
         <img class="LogoWebsite" src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <ul>
             <li> <a href="index.html"> Home </a> </li>
-            <li> <a href="Restaurants.html"> Restaurants </a> </li>
+            <li class="currentpage_Button"> <a href="Restaurants.html"> Restaurants </a> </li>
             <li> <a href="History_And_Culture.html"> Kunst en Cultuur </a> </li>
             <li> <a href="Events.html"> Evenementen </a> </li>
             <li> <a href="Recreation.html"> Recreatie </a> </li>
