--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <img class="LogoWebsite" src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <ul>
-            <li> <a href="index.html"> Home </a> </li>
+            <li class="currentpage_Button"> <a href="index.html"> Home </a> </li>
             <li> <a href="Restaurants.html"> Restaurants </a> </li>
             <li> <a href="History_And_Culture.html"> Kunst en Cultuur </a> </li>
             <li> <a href="Events.html"> Evenementen </a> </li>
